# System-079

./: 079.bat  CMakeLists.txt  LICENSE  Makefile  README.md  TODO_LIST.txt  WarningsAndBans.db  bochs_config  bx_enh_dbg.ini  compiler.test.c  dll_test.cpp  main.cpp  stdio  system_emu_x86_64.windows.bat  t.c  t.h  test.soft
Examples/: apk.struct.example  file.header.example  install.struct.example
LanguageSupport/: Raw-APK.xml
build_scripts/: config.mk
build_scripts/toolchain/: Makefile
dev/src/applications/Chaos.txt/src/: Compiler.c
dev/src/bootloader games/stage 3/: selector.c
dev/src/bootloader/stage1/: BOOT.asm  stage1.mk
dev/src/bootloader/stage2/: asm.h  bootmanager.c  entry.asm  linker.ld  stage2.mk
dev/src/bootloader/stage2/restdlibs/: stdio.c  stdio.h
dev/src/bootloader/stage2/sys32/services/: disk.c  disk.h  floppy.c  floppy.h
dev/src/bootloader/stage2/x86_assembly/: GLOBALDESCRIPTORTABLE.asm  protectedmode.asm  realmode.asm
dev/src/games/NULL - Lost in Forest and Heaven/: main.c
dev/src/kernel/: entry.asm  kernel.c  kernel.mk  linker.ld
dev/src/software_tests/ChaosFormat/: CF  main.c
terminal/Windows 11/: main.cpp
